--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
 
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    background-color: #535353;
+}
+
+#container{
+    height: 75vh;
+    background-color: #121212;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    flex-direction: column;
+}
