--- a/style.css
+++ b/style.css
@@ -89,3 +89,18 @@ body{
     background-color: #ddd;
     box-shadow: 0 0 5px #ccc;
 }
+
+@media only screen and (min-width: 768px){
+    #container{
+        flex-direction: row-reverse;
+    }
+    #text-container{
+        align-items: flex-start;
+    }
+    #img-container{
+        align-items: flex-end;
+    }
+    #img-container, #text-container{
+        padding: 0;
+    }
+}
