--- a/style.css
+++ b/style.css
@@ -90,6 +90,16 @@ body{
     box-shadow: 0 0 5px #ccc;
 }
 
+.slide-animation{
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@keyframes fade{
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+
 @media only screen and (min-width: 768px){
     #container{
         flex-direction: row-reverse;
